# ku-lms-downloader

./: .env.example  .gitignore  README.md  pyproject.toml
kulms/: __init__.py  cli.py  client.py  config.py  downloader.py  models.py  urls.py
tests/: test_cli.py  test_client_helpers.py  test_config.py  test_downloader.py  test_urls.py
